--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,10 +19,24 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - run: npm version ${{ github.event.inputs.version }}
-      - run: npm install
-      - run: npm run package
+      - run: |
+          git checkout -b release-v${{ github.event.inputs.version }}
+          npm version ${{ github.event.inputs.version }}
+          npm install
+          npm run package
+          git add package.json
+          git commit -m "Bump version to ${{ github.event.inputs.version }}"
+          git push origin release-v${{ github.event.inputs.version }}
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: release-v${{ github.event.inputs.version }}
+          title: "Release v${{ github.event.inputs.version }}"
+          body: "This PR releases version ${{ github.event.inputs.version }}."
+          draft: false
       - name: Create Release
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -33,6 +47,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Upload Release Asset
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
@@ -41,13 +56,12 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./chronoly-${{ github.event.inputs.version }}.vsix
           asset_name: chronoly-${{ github.event.inputs.version }}.vsix
-          asset_content_type: applicationA/vsix
-          
+          asset_content_type: application/vsix
       - name: Publish to marketplace
+        if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
         uses: HaaLeo/publish-vscode-extension@v1
         with:
           pat: ${{ secrets.VS_MARKETPLACE_PAT }}
           registryUrl: https://marketplace.visualstudio.com
           extensionFile: ./chronoly-${{ github.event.inputs.version }}.vsix
           packagePath: ''
-      - run: git push
