--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,7 +21,7 @@ jobs:
           node-version: '16'
       - run: |
           git checkout -b release-v${{ github.event.inputs.version }}
-          npm version ${{ github.event.inputs.version }}
+          npm version ${{ github.event.inputs.version }} --no-git-tag-version
           npm install
           npm run package
           git add package.json
