--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "categories": [
     "Other"
   ],
+  "icon": "assets/logo128px.png",
   "activationEvents": [
     "onStartupFinished",
     "onUri"
