chore(workflow): clean up workflow for releases

--- a/.github/workflows/build-preview.yml
+++ b/.github/workflows/build-preview.yml
@@ -1,10 +1,10 @@
 name: Build Preview
 
 on:
-  push:
+  workflow_dispatch:
+  pull_request:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   build:
