--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "3.0.2",
+    "rimraf": "^6.0.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
